[gd_scene load_steps=11 format=3 uid="uid://cbo1dvq5uuiaa"]

[ext_resource type="PackedScene" uid="uid://do8sg1k5xvj2h" path="res://models/core_models/platform.glb" id="1_4yjl7"]
[ext_resource type="Script" path="res://objects/platform_transparent.gd" id="2_igm85"]
[ext_resource type="Texture2D" uid="uid://72ldk18ropuj" path="res://models/props/Textures/colormap.png" id="3_exppd"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_hyw7p"]
data = PackedVector3Array(-0.9, 0, -0.72, -1, 0.2, -0.8, -1, 0.2, 0.8, -1, 0.2, 0.8, -0.9, 0, 0.72, -0.9, 0, -0.72, -0.95, 0.5, -0.95, -0.95, 0.2, -0.95, -0.8, 0.2, -1, -0.8, 0.2, -1, -0.8, 0.5, -1, -0.95, 0.5, -0.95, -1, 0.2, -0.8, -0.95, 0.2, -0.95, -0.95, 0.5, -0.95, -0.95, 0.5, -0.95, -1, 0.5, -0.8, -1, 0.2, -0.8, -1, 0.2, 0.8, -1, 0.2, -0.8, -1, 0.5, -0.8, -1, 0.5, -0.8, -1, 0.5, 0.8, -1, 0.2, 0.8, 0.8, 0.5, -1, 0.8, 0.2, -1, 0.95, 0.2, -0.95, 0.95, 0.2, -0.95, 0.95, 0.5, -0.95, 0.8, 0.5, -1, -0.8, 0.5, -1, -0.8, 0.2, -1, 0.8, 0.2, -1, 0.8, 0.2, -1, 0.8, 0.5, -1, -0.8, 0.5, -1, 1, 0.5, -0.8, 0.95, 0.5, -0.95, 0.95, 0.2, -0.95, 0.95, 0.2, -0.95, 1, 0.2, -0.8, 1, 0.5, -0.8, -0.8, 0.5, 1, -0.8, 0.2, 1, -0.95, 0.2, 0.95, -0.95, 0.2, 0.95, -0.95, 0.5, 0.95, -0.8, 0.5, 1, -0.95, 0.2, 0.95, -1, 0.2, 0.8, -1, 0.5, 0.8, -1, 0.5, 0.8, -0.95, 0.5, 0.95, -0.95, 0.2, 0.95, -0.8, 0.2, -1, -0.72, 0, -0.9, 0.72, 0, -0.9, 0.72, 0, -0.9, 0.8, 0.2, -1, -0.8, 0.2, -1, 1, 0.2, 0.8, 1, 0.2, -0.8, 0.9, 0, -0.72, 0.9, 0, -0.72, 0.9, 0, 0.72, 1, 0.2, 0.8, -0.95, 0.2, -0.95, -0.855, 0, -0.855, -0.72, 0, -0.9, -0.72, 0, -0.9, -0.8, 0.2, -1, -0.95, 0.2, -0.95, 1, 0.2, 0.8, 0.9, 0, 0.72, 0.855, 0, 0.855, 0.855, 0, 0.855, 0.95, 0.2, 0.95, 1, 0.2, 0.8, -0.855, 0, 0.855, -0.9, 0, 0.72, -1, 0.2, 0.8, -1, 0.2, 0.8, -0.95, 0.2, 0.95, -0.855, 0, 0.855, 0.8, 0.2, 1, 0.72, 0, 0.9, -0.72, 0, 0.9, -0.72, 0, 0.9, -0.8, 0.2, 1, 0.8, 0.2, 1, 0.95, 0.5, 0.95, 1, 0.5, 0.8, 1, 0.2, 0.8, 1, 0.2, 0.8, 0.95, 0.2, 0.95, 0.95, 0.5, 0.95, 1, 0.5, 0.8, 1, 0.5, -0.8, 1, 0.2, -0.8, 1, 0.2, -0.8, 1, 0.2, 0.8, 1, 0.5, 0.8, 1, 0.2, -0.8, 0.95, 0.2, -0.95, 0.855, 0, -0.855, 0.855, 0, -0.855, 0.9, 0, -0.72, 1, 0.2, -0.8, -0.855, 0, -0.855, -0.95, 0.2, -0.95, -1, 0.2, -0.8, -1, 0.2, -0.8, -0.9, 0, -0.72, -0.855, 0, -0.855, 0.8, 0.2, -1, 0.72, 0, -0.9, 0.855, 0, -0.855, 0.855, 0, -0.855, 0.95, 0.2, -0.95, 0.8, 0.2, -1, 0.95, 0.2, 0.95, 0.855, 0, 0.855, 0.72, 0, 0.9, 0.72, 0, 0.9, 0.8, 0.2, 1, 0.95, 0.2, 0.95, 0.855, 0, 0.855, 0.9, 0, 0.72, 0.9, 0, -0.72, 0.9, 0, -0.72, 0.855, 0, -0.855, 0.855, 0, 0.855, 0.855, 0, -0.855, 0.72, 0, 0.9, 0.855, 0, 0.855, 0.855, 0, -0.855, 0.72, 0, -0.9, 0.72, 0, 0.9, 0.72, 0, -0.9, -0.72, 0, 0.9, 0.72, 0, 0.9, 0.72, 0, -0.9, -0.72, 0, -0.9, -0.72, 0, 0.9, -0.72, 0, -0.9, -0.855, 0, -0.855, -0.72, 0, 0.9, -0.855, 0, -0.855, -0.855, 0, 0.855, -0.72, 0, 0.9, -0.855, 0, -0.855, -0.9, 0, -0.72, -0.855, 0, 0.855, -0.9, 0, -0.72, -0.9, 0, 0.72, -0.855, 0, 0.855, -0.8, 0.2, 1, -0.72, 0, 0.9, -0.855, 0, 0.855, -0.855, 0, 0.855, -0.95, 0.2, 0.95, -0.8, 0.2, 1, 0.95, 0.5, 0.95, 0.95, 0.2, 0.95, 0.8, 0.2, 1, 0.8, 0.2, 1, 0.8, 0.5, 1, 0.95, 0.5, 0.95, 0.8, 0.5, 1, 0.8, 0.2, 1, -0.8, 0.2, 1, -0.8, 0.2, 1, -0.8, 0.5, 1, 0.8, 0.5, 1, -0.95, 0.5, 0.95, -1, 0.5, 0.8, -1, 0.5, -0.8, -0.95, 0.5, 0.95, -1, 0.5, -0.8, -0.95, 0.5, -0.95, -0.8, 0.5, 1, -0.95, 0.5, 0.95, -0.95, 0.5, -0.95, -0.8, 0.5, 0.7675, -0.8, 0.5, 1, -0.95, 0.5, -0.95, -0.8, 0.5, -0.7675, -0.8, 0.5, 0.7675, -0.95, 0.5, -0.95, -0.8, 0.5, 1, -0.8, 0.5, 0.7675, -0.7919, 0.5, 0.7919, -0.8, 0.5, 1, -0.7919, 0.5, 0.7919, -0.7675, 0.5, 0.8, -0.8, 0.5, 1, -0.7675, 0.5, 0.8, 0.7675, 0.5, 0.8, -0.8, 0.5, -0.7675, -0.95, 0.5, -0.95, -0.8, 0.5, -1, 0.8, 0.5, 1, -0.8, 0.5, 1, 0.7675, 0.5, 0.8, -0.7919, 0.5, -0.7919, -0.8, 0.5, -0.7675, -0.8, 0.5, -1, -0.7675, 0.5, -0.8, -0.7919, 0.5, -0.7919, -0.8, 0.5, -1, 0.7675, 0.5, -0.8, -0.7675, 0.5, -0.8, -0.8, 0.5, -1, 0.8, 0.5, 1, 0.7675, 0.5, 0.8, 0.7919, 0.5, 0.7919, 0.7675, 0.5, -0.8, -0.8, 0.5, -1, 0.8, 0.5, -1, 0.7919, 0.5, -0.7919, 0.7675, 0.5, -0.8, 0.8, 0.5, -1, 0.8, 0.5, -0.7675, 0.7919, 0.5, -0.7919, 0.8, 0.5, -1, 0.8, 0.5, 0.7675, 0.8, 0.5, -0.7675, 0.8, 0.5, -1, 0.8, 0.5, 1, 0.7919, 0.5, 0.7919, 0.8, 0.5, 0.7675, 0.8, 0.5, -1, 0.95, 0.5, -0.95, 0.8, 0.5, 0.7675, 0.8, 0.5, 1, 0.8, 0.5, 0.7675, 0.95, 0.5, -0.95, 0.95, 0.5, 0.95, 0.8, 0.5, 1, 0.95, 0.5, -0.95, 0.95, 0.5, 0.95, 0.95, 0.5, -0.95, 1, 0.5, -0.8, 1, 0.5, -0.8, 1, 0.5, 0.8, 0.95, 0.5, 0.95, 0.8, 0.5, -0.7675, 0.8, 0.5, 0.7675, 0.7919, 0.5, 0.7919, 0.7919, 0.5, 0.7919, 0.7919, 0.5, -0.7919, 0.8, 0.5, -0.7675, 0.7919, 0.5, 0.7919, 0.7675, 0.5, 0.8, 0.7919, 0.5, -0.7919, 0.7675, 0.5, 0.8, 0.7675, 0.5, -0.8, 0.7919, 0.5, -0.7919, 0.7675, 0.5, 0.8, 0.6, 0.5, -0.6, 0.7675, 0.5, -0.8, 0.6, 0.5, -0.6, -0.7675, 0.5, -0.8, 0.7675, 0.5, -0.8, 0.7675, 0.5, 0.8, 0.6, 0.5, 0.6, 0.6, 0.5, -0.6, 0.6, 0.5, -0.6, -0.6, 0.5, -0.6, -0.7675, 0.5, -0.8, 0.6, 0.5, 0.6, 0.7675, 0.5, 0.8, -0.7675, 0.5, 0.8, -0.6, 0.5, -0.6, -0.6, 0.5, 0.6, -0.7675, 0.5, -0.8, -0.7675, 0.5, 0.8, -0.6, 0.5, 0.6, 0.6, 0.5, 0.6, -0.7675, 0.5, 0.8, -0.7675, 0.5, -0.8, -0.6, 0.5, 0.6, -0.7675, 0.5, 0.8, -0.7919, 0.5, -0.7919, -0.7675, 0.5, -0.8, -0.7675, 0.5, 0.8, -0.7919, 0.5, 0.7919, -0.7919, 0.5, -0.7919, -0.7919, 0.5, 0.7919, -0.8, 0.5, -0.7675, -0.7919, 0.5, -0.7919, -0.7919, 0.5, 0.7919, -0.8, 0.5, 0.7675, -0.8, 0.5, -0.7675, 0.6, 0.5, -0.6, 0.6, 0.5, 0.6, -0.6, 0.5, 0.6, -0.6, 0.5, 0.6, -0.6, 0.5, -0.6, 0.6, 0.5, -0.6, -0.45, 0.5, -0.2788, -0.4946, 0.5, -0.3391, -0.4946, 0.55, -0.3391, -0.4946, 0.55, -0.3391, -0.45, 0.55, -0.2788, -0.45, 0.5, -0.2788, -0.3372, 0.55, -0.3156, -0.3372, 0.5, -0.3156, -0.3975, 0.5, -0.271, -0.3975, 0.5, -0.271, -0.3975, 0.55, -0.271, -0.3372, 0.55, -0.3156, -0.3294, 0.55, -0.3681, -0.374, 0.55, -0.4284, -0.374, 0.5, -0.4284, -0.374, 0.5, -0.4284, -0.3294, 0.5, -0.3681, -0.3294, 0.55, -0.3681, -0.4867, 0.55, -0.3916, -0.4867, 0.5, -0.3916, -0.4265, 0.5, -0.4362, -0.4265, 0.5, -0.4362, -0.4265, 0.55, -0.4362, -0.4867, 0.55, -0.3916, -0.4265, 0.55, -0.4362, -0.374, 0.55, -0.4284, -0.3294, 0.55, -0.3681, -0.3294, 0.55, -0.3681, -0.3372, 0.55, -0.3156, -0.4265, 0.55, -0.4362, -0.3372, 0.55, -0.3156, -0.3975, 0.55, -0.271, -0.4265, 0.55, -0.4362, -0.3975, 0.55, -0.271, -0.4867, 0.55, -0.3916, -0.4265, 0.55, -0.4362, -0.3975, 0.55, -0.271, -0.4946, 0.55, -0.3391, -0.4867, 0.55, -0.3916, -0.3975, 0.55, -0.271, -0.45, 0.55, -0.2788, -0.4946, 0.55, -0.3391, -0.3975, 0.55, -0.271, -0.3975, 0.5, -0.271, -0.45, 0.5, -0.2788, -0.45, 0.5, -0.2788, -0.45, 0.55, -0.2788, -0.3975, 0.55, -0.271, -0.4946, 0.5, -0.3391, -0.4867, 0.5, -0.3916, -0.4867, 0.55, -0.3916, -0.4867, 0.55, -0.3916, -0.4946, 0.55, -0.3391, -0.4946, 0.5, -0.3391, -0.3294, 0.55, -0.3681, -0.3294, 0.5, -0.3681, -0.3372, 0.5, -0.3156, -0.3372, 0.5, -0.3156, -0.3372, 0.55, -0.3156, -0.3294, 0.55, -0.3681, -0.4265, 0.55, -0.4362, -0.4265, 0.5, -0.4362, -0.374, 0.5, -0.4284, -0.374, 0.5, -0.4284, -0.374, 0.55, -0.4284, -0.4265, 0.55, -0.4362, -0.2345, 0.5, -0.2685, -0.1786, 0.5, -0.4077, -0.1786, 0.55, -0.4077, -0.1786, 0.55, -0.4077, -0.2345, 0.55, -0.2685, -0.2345, 0.5, -0.2685, -0.0537, 0.55, -0.115, -0.0537, 0.5, -0.115, -0.1929, 0.5, -0.171, -0.1929, 0.5, -0.171, -0.1929, 0.55, -0.171, -0.0537, 0.55, -0.115, 0.0438, 0.55, -0.1566, 0.0998, 0.55, -0.2958, 0.0998, 0.5, -0.2958, 0.0998, 0.5, -0.2958, 0.0438, 0.5, -0.1566, 0.0438, 0.55, -0.1566, -0.081, 0.55, -0.4493, -0.081, 0.5, -0.4493, 0.0582, 0.5, -0.3934, 0.0582, 0.5, -0.3934, 0.0582, 0.55, -0.3934, -0.081, 0.55, -0.4493, 0.0582, 0.55, -0.3934, 0.0998, 0.55, -0.2958, 0.0438, 0.55, -0.1566, 0.0438, 0.55, -0.1566, -0.0537, 0.55, -0.115, 0.0582, 0.55, -0.3934, -0.0537, 0.55, -0.115, -0.081, 0.55, -0.4493, 0.0582, 0.55, -0.3934, -0.0537, 0.55, -0.115, -0.1929, 0.55, -0.171, -0.081, 0.55, -0.4493, -0.1929, 0.55, -0.171, -0.2345, 0.55, -0.2685, -0.081, 0.55, -0.4493, -0.2345, 0.55, -0.2685, -0.1786, 0.55, -0.4077, -0.081, 0.55, -0.4493, -0.1929, 0.55, -0.171, -0.1929, 0.5, -0.171, -0.2345, 0.5, -0.2685, -0.2345, 0.5, -0.2685, -0.2345, 0.55, -0.2685, -0.1929, 0.55, -0.171, -0.1786, 0.5, -0.4077, -0.081, 0.5, -0.4493, -0.081, 0.55, -0.4493, -0.081, 0.55, -0.4493, -0.1786, 0.55, -0.4077, -0.1786, 0.5, -0.4077, 0.0438, 0.55, -0.1566, 0.0438, 0.5, -0.1566, -0.0537, 0.5, -0.115, -0.0537, 0.5, -0.115, -0.0537, 0.55, -0.115, 0.0438, 0.55, -0.1566, 0.0582, 0.55, -0.3934, 0.0582, 0.5, -0.3934, 0.0998, 0.5, -0.2958, 0.0998, 0.5, -0.2958, 0.0998, 0.55, -0.2958, 0.0582, 0.55, -0.3934)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rojqs"]
albedo_texture = ExtResource("3_exppd")
metallic = 0.5
metallic_specular = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_yvcc4"]

[sub_resource type="Animation" id="Animation_djbnh"]
resource_name = "Transparent"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("platform2:transparency")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_jyn67"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("platform2:transparency")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_nxkdn"]
resource_name = "Opacity"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("platform2:transparency")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xlu5s"]
_data = {
"Opacity": SubResource("Animation_nxkdn"),
"RESET": SubResource("Animation_jyn67"),
"Transparent": SubResource("Animation_djbnh")
}

[node name="platform" instance=ExtResource("1_4yjl7")]
script = ExtResource("2_igm85")

[node name="platform2#StaticBody3D" type="StaticBody3D" parent="." index="0"]

[node name="platform2_StaticBody3D#CollisionShape3D" type="CollisionShape3D" parent="platform2#StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_hyw7p")

[node name="platform2" parent="." index="1"]
transparency = 1.0
lod_bias = 0.001
surface_material_override/0 = SubResource("StandardMaterial3D_rojqs")

[node name="Area3D" type="Area3D" parent="platform2" index="0"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="platform2/Area3D" index="0"]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, 0, 0, 0)
shape = SubResource("BoxShape3D_yvcc4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_xlu5s")
}

[connection signal="visibility_changed" from="platform2" to="." method="_on_platform_2_visibility_changed"]
[connection signal="area_entered" from="platform2/Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="platform2/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="platform2/Area3D" to="." method="_on_area_3d_body_exited"]
